fix: Scale image according to page width
Setting max-width and max-height to 100% relative to
the parent allows the image to keep original resolution if
there's enough space on the screen, but shrink if the viewport
gets too narrow.

--- a/_includes/css/hacker.css
+++ b/_includes/css/hacker.css
@@ -55,7 +55,8 @@ article {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        max-width: 500px;
+        max-width: 100%;
+        max-height: 100%;
     }
 }
 
