--- a/docs/styles.css
+++ b/docs/styles.css
@@ -58,7 +58,8 @@ article img {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        max-width: 500px;
+        max-width: 100%;
+        max-height: 100%;
     }
 
 #text {
